[package]
name = "black_hole_wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = ["CanvasRenderingContext2d",
    "HtmlCanvasElement", "HtmlImageElement", "Window", "Document",
    "WebGlRenderingContext", "WebGlProgram", "WebGlShader", "WebGlTexture",
    "ImageData", "MouseEvent", "console"] }
js-sys = "0.3.77"
nalgebra = "0.33.2"
console_error_panic_hook = "0.1.6"
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
glam = { version = "0.30.3" }

